# rusty-ful

./: Cargo.toml  LICENSE  config.toml  workspaces.json
src/: cli.rs  config_parser.rs  http.rs  main.rs  manager.rs
tests/: config_parser_test.rs
