[package]
name = "rustyful"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.15.0", features = ["full"] }
toml = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
maplit = "1.0.2"
